sass/_main.sass
// Normally mainpage styles
body
	//+gpu
	position: relative
	//overflow: hidden
	// overflow-y: scroll

// .running
// 	overflow: hidden
// ::-webkit-scrollbar
// 	display: none
%in
	width: 960px 
	margin: 0 auto
	position: relative 
.in
	@extend %in
	height: 100% 
.section
	height: 100%
	background: url(../img/bg1.jpg) no-repeat 0 0
	background-size: cover
	overflow: hidden
	position: relative
	
	// position: absolute
	// top: 0
	// left: 0
	// right: 0
	// min-width: 960px    
	// display: none
	&.is-active,&.was-active
		z-index: 999
		display: block 
	&.was-active
		z-index: 998
.section
	-webkit-perspective: 1000px
	perspective: 1000px
	
	.in
		+transition(all .6s ease)
		-webkit-transform: rotateX(60deg)
		opacity: 0 
	&.a
		.in
			-webkit-transform: rotateX(0deg)
			opacity: 1 
+keyframes(wave)
	0%
		top: 0px 
	25%
		top: 10px 
	50%
		top: 0px 
	100%
		top: 0px 

.gobottom
	position: absolute
	bottom: 50px 
	left: 50%
	width: 300px  
	text-align: center
	margin-left: -150px 
	cursor: pointer
	.gobottom__icon
		+s(gobottom)
		display: inline-block
	.gobottom__icon1
		+s(mouse)
		display: inline-block
		position: relative
		+animation(wave 4s linear infinite both)
	span
		display: block
		margin-top: 19px 
		text-align: center
		+reg
		font-size: 14px
		color: #B4D611 

.home
	background: url(../img/bg1.jpg) no-repeat 50% 50%
	height: 1042px 
	overflow: hidden
	background-size: cover
	.home__wraplines
		height: 550px 
		top: 280px 
		top: 220px 
		width: 1920px
		//width: 2200px 
		left: 50% 
		position: absolute
		margin-left: -960px 
		//margin-left: -1100px 
		
	.home__green,.home__blue
		position: absolute
		z-index: 6
		height: 750px 
		background:  url(../img/green.png) no-repeat 50% 50% 
		//background-size: cover
		width: 100% 
		top: 0
		left: 0px 
		//top: 50%
		//margin-top: -260px
		//left: 0 
		opacity: 0
		+transition(opacity 1s linear .7s)
		//+transition-delay(.8s)
	&.a
		.home__green,.home__blue
			opacity: 1 
	.home__blue
		z-index: 3
		//3top: 325px 
		background:  url(../img/blue.png) no-repeat 50% 50% 
		+transition(opacity 1s linear .3s)
		//background-size: cover
	.home__window
		position: absolute
		left: 50%
		margin-left: -303px 
		top: 194px 
		z-index: 220 
		img
			position: relative
			z-index: 222 
		.parallax
			width: 530px 
			height: 591px 
			left: 43px 
			top: 48px 
			position: absolute
			z-index: 221 
			overflow: hidden
			div
				width: 1024px 
				height: 768px 
				width: 602px 
				height: 656px 
				top: 0
				left: 0
				position: absolute  
				background: url("../img/view.png") no-repeat 0 0
				
	.home__shadow
		position: absolute
		top: 50%
		left: 50%
		width: 1000px   
		height: 760px 
		margin-top: -(760px/2) 
		margin-left: -500px 
		background: url("../img/homeshadow.png") 
		z-index: 8 
	.home__window,.home__shadow
		opacity: 0
		+transition(all .9s linear) 
		+transition-delay(1.4s)
		+transform(scale(1))
	&.a
		.home__window,.home__shadow
			opacity: 1 
			+transform(scale(1))
		
	.home__logo
		position: absolute
		top: 100px 
		left: 49px 
		+s(logo)
		+hide-text
		z-index: 1000
		cursor: pointer 
	.home__top
		position: absolute
		top: 72px 
		right: 0
		+s(border0)
		+reg 
		z-index: 120 
		.home__toptext
			font-size: 25px 
			color: #565555 
			text-align: right
			white-space: nowrap
			padding-right: 52px  
			padding-top: 33px 
			line-height: 32px 
		.home__topsubtext
			font-size: 16px 
			color: #A3C32F
			position: absolute
			bottom: -.5em  
			right: 22px 
			width: 180px 
			text-align: center
.descr
	background: url(../img/bg2.jpg) no-repeat 50% 50%
	height: 1000px 
	background-size: cover
	.descr__top
		margin-top: 100px 
		+s(border)
		position: relative
		white-space: nowrap
		color: #E8E7E7 
		+reg
		font-size: 24px 
		text-align: right
		line-height: 1 
		h2
			font-size: 48px 
			font-weight: normal
			margin-bottom: 20px 
		.descr__topwrap
			position: absolute
			top: 55px 
			right: 42px 
	.descr__top
		margin-top: 100px 
		float: right
		position: relative
		z-index: 11 
	.descr__edin
		clear: both
		float: right
		width: 373px 
		padding-top: 83px 
		font-size: 14px 
		color: #FFFFFF
		line-height: 22px
		text-align: right
		+transition(all .6s linear 1.1s)
		opacity: 0 
		z-index: 20 
		position: relative
		strong
			display: block
			font-weight: normal
			color: #B4D42E
			font-size: 24px 
			margin-bottom: 5px 
		p
			margin-bottom: 22px  
			a
				color: #B4D42E
				text-decoration: none  
	.descr__about
		float: left
		clear: both
		margin-left: 92px 
		padding-top: 81px 
		+reg
		opacity: 0
		z-index: 20 
		+transition(all .5s linear 1.4s) 
		h3
			font-size: 24px 
			font-weight: normal
			color: #FFFFFF
			margin-bottom: 29px   
			a
				color: #B4D42E 
				text-decoration: none
				display: inline-block
				position: relative
				&:before
					position: absolute
					bottom: -4px 
					content: ' '
					left: 0
					width: 100%
					border-bottom: 3px solid #B4D42E
		ul
			list-style: none
			color: #D1CDCD
			font-size: 16px  
			li
				margin-bottom: 18px 
				position: relative
				padding-left: 32px 
				opacity: 0
				+transition(all .2s linear 1.6s) 
				&+li
					+transition-delay(1.8s)
				&+li+li
					+transition-delay(2s)
				&+li+li+li
					+transition-delay(2.2s)
				&+li+li+li+li
					+transition-delay(2.4s)
				&+li+li+li+li+li
					+transition-delay(2.6s)
				&:before
					content: ' '
					+s(bul)
					position: absolute
					left: 0
					top: -1px  
			em
				color: #B4D42E
				font-style: normal
				+bold
			strong
				font-weight: normal
				color: #FFFFFF
				+bold 
	.video
		position: absolute
		left: 92px 
		top: 160px 
		z-index: 10 
		width: 427px 
		height: 427px 
		background: #000
		border-radius: 427px
		cursor: pointer
		opacity: 0 
		+transition(all .6s linear 0.3s)
		&:hover
			.video__overlay
				opacity: 0 
		.video__pic
			width: 427px 
			height: 427px 
			background: #000 url(../img/video.jpg) no-repeat 50% 50%
			border-radius: 427px
			position: relative
		.video__overlay
			position: absolute
			left: 0
			top: 0  
			width: 427px 
			height: 427px 
			background: #000
			border-radius: 427px
			+transition(all .2s linear)
			opacity: .5 
		.video__play
			+s(play)
			position: absolute
			left: 155px  
			top: 155px 
			z-index: 20 
			span
				font-size: 14px 
				color: #B4D42E 
				width: 100px 
				left: 50%
				top: 130px 
				margin-left: -50px  
				position: absolute
				text-align: center
	.descr__stamp
		position: absolute
		+s(stamp)
		top: 450px 
		right: -113px 
	&.a
		.video
			opacity: 1
			top: 160px  
		.descr__about
			opacity: 1 
			li
				opacity: 1 
		.descr__edin
			opacity: 1 
		

